Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -586,22 +586,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Liz Kaplan'"
+       "'Meg Casscells-Hamby'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "name.title()"
+    "\"meg casscells-hamby\".title()"
    ]
   },
   {
